<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Dog Show Pro</string>
    <string name="action_settings">Settings</string>
    <string name="button_back">Back</string>
    <string name="button_create">Create</string>
    <string name="button_next">Next</string>
    <string name="button_finish">Finish</string>
    <string name="button_join">Join</string>
    <string name="hello_world">Hello world!</string>
    <string name="dashboard_handlers">Handlers</string>
    <string name="dashboard_doghouse">Doghouse</string>
    <string name="dashboard_schedule">Schedule</string>
    <string name="error_password_wrong">Wrong password</string>
    <string name="error_team_name_forbidden">Pick a different team name. That one\'s reserved.</string>
    <string name="error_team_name_already_member">You\'re already a member of %1$s. Choose it from the picker to make it active</string>
    <string name="error_team_locked_out">You\'ve entered the wrong password too many times. Double-check it with a member of the team and try again later.</string>
    <string name="error_team_password_still_wrong">Wrong password. Did you enter the right team name?</string>
    <string name="error_password_mismatch">Type carefully, your passwords didn\'t match.</string>
    <string name="error_team_already_exists">The team "%1$s" already exists. Go back and select Join or choose a different name.</string>
    <string name="error_team_name_empty_join">Enter the name of the team</string>
    <string name="error_team_name_empty_create">Enter the name of your new team</string>
    <string name="error_team_doesnt_exist">The team "%1$s" doesn\'t exist. Go back select \"Create\" if you\'d like to make it.</string>
    <string name="error_team_password_empty">What\'s the password?</string>
    <string name="description_add_account">Add a gmail account to begin!</string>
    <string name="description_choose_account">Choose an account</string>
    <string name="instructions_team_create_or_join">Do you want to join an existing team or create a new one?</string>
    <string name="instructions_judge_time_group">Minutes to judge previous group ring</string>
    <string name="description_sign_in_main">
<![CDATA[
        Welcome to Dog Show Pro, a companion app for Onofrio dog shows.<br>
        <br>
        You\'re just a few steps away from from becoming a true pro! Press the &quot;Sign-in&quot; button
        to get started.
    ]]>
    </string>
    <string name="hint_password">Password</string>
    <string name="hint_password_confirm">Confirm password</string>
    <string name="hint_team_name">Team name</string>
    <string name="img_description_handler">handler image</string>
    <string name="menu_multiple_select_title">%1$d Selected</string>
    <string name="menu_single_select_title">%1$s - %2$s</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_search">Search</string>
    <string name="menu_select_all">Select All</string>
    <string name="menu_select_none">Select None</string>
    <string name="menu_delete">Delete</string>
    <string name="progress_title_joining_team">Joining team</string>
    <string name="progress_message_joining_team_sync">Syncing team data</string>
    <string name="progress_title_creating_team">Creating team</string>
    <string name="template_ring_number">Ring %1$d</string>

    <plurals name="template_points_needed">
        <item quantity="zero">No points (15 needed)</item>
        <item quantity="one">%1$d point (%2$d needed)</item>
        <item quantity="other">%1$d points (%2$d needed)</item>
    </plurals>

    <string name="template_points_finished">%1$d points</string>

    <plurals name="template_majors">
        <item quantity="zero">No majors (2 needed)</item>
        <item quantity="one">1 major (1 needed)</item>
        <item quantity="other">%d majors</item>
    </plurals>

    <string name="title_my_schedule">My Schedule</string>
    <string name="title_team_schedule">Team</string>
    <string name="title_full_schedule">Full Show</string>
    <string name="title_team_add">Add a team</string>
    <string name="title_team_create">Create a team</string>
    <string name="title_team_join">Join a team</string>
    <string name="title_teams">Teams</string>
    <string name="title_dogs">Dogs</string>
    <string name="title_handlers">Handlers</string>
    <string name="title_show_day">Show Day</string>

</resources>