<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/layout_background"
    android:orientation="vertical" >

    <dev.tnclark8012.apps.android.dogshow.widget.TypefacedTextView
        xmlns:ttv="http://schemas.android.com/apk/res/dev.tnclark8012.apps.android.dogshow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_padding_normal"
        android:paddingLeft="@dimen/element_margin_normal"
        android:paddingTop="@dimen/element_margin_normal"
        android:text="@string/title_team_create"
        android:textColor="@color/dark_blue"
        android:textSize="@dimen/text_large"
        ttv:typeface="Roboto-Medium.ttf" >
    </dev.tnclark8012.apps.android.dogshow.widget.TypefacedTextView>

    <View
        android:layout_width="fill_parent"
        android:layout_height="2dip"
        android:layout_marginLeft="@dimen/element_margin_normal"
        android:layout_marginRight="@dimen/element_margin_normal"
        android:background="@color/dark_blue" />

    <dev.tnclark8012.apps.android.dogshow.widget.TypefacedEditText
        xmlns:ttv="http://schemas.android.com/apk/res/dev.tnclark8012.apps.android.dogshow"
        android:id="@+id/edit_show_team_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_padding_normal"
        android:hint="@string/hint_team_name"
        android:paddingLeft="@dimen/element_margin_normal"
        android:paddingTop="@dimen/element_margin_normal"
        android:textColor="#999999"
        ttv:typeface="Roboto-Medium.ttf" />

    <dev.tnclark8012.apps.android.dogshow.widget.TypefacedEditText
        xmlns:ttv="http://schemas.android.com/apk/res/dev.tnclark8012.apps.android.dogshow"
        android:id="@+id/edit_show_team_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_padding_normal"
        android:hint="@string/hint_password"
        android:paddingLeft="@dimen/element_margin_normal"
        android:paddingTop="@dimen/element_margin_normal"
        android:textColor="#999999"
        ttv:typeface="Roboto-Medium.ttf" >
    </dev.tnclark8012.apps.android.dogshow.widget.TypefacedEditText>

    <dev.tnclark8012.apps.android.dogshow.widget.TypefacedEditText
        xmlns:ttv="http://schemas.android.com/apk/res/dev.tnclark8012.apps.android.dogshow"
        android:id="@+id/edit_show_team_confirm_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_padding_normal"
        android:hint="@string/hint_password_confirm"
        android:paddingLeft="@dimen/element_margin_normal"
        android:paddingTop="@dimen/element_margin_normal"
        android:textColor="#999999"
        ttv:typeface="Roboto-Medium.ttf" >
    </dev.tnclark8012.apps.android.dogshow.widget.TypefacedEditText>
    <dev.tnclark8012.apps.android.dogshow.widget.TypefacedTextView
        xmlns:ttv="http://schemas.android.com/apk/res/dev.tnclark8012.apps.android.dogshow"
        android:id="@+id/text_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/element_padding_normal"
        android:paddingLeft="@dimen/element_margin_normal"
        android:paddingTop="@dimen/element_margin_normal"
        android:textColor="@color/dark_red"
        android:textSize="@dimen/text_small"
        ttv:typeface="Roboto-Medium.ttf" >
    </dev.tnclark8012.apps.android.dogshow.widget.TypefacedTextView>
    
    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/element_margin_normal"
        android:layout_marginRight="@dimen/element_margin_normal"
        android:background="@drawable/list_divider" />

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_gravity="bottom"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_bar_button_left"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_back" />

        <Button
            android:id="@+id/button_bar_button_right"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/button_next" />
    </LinearLayout>

</LinearLayout>